--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
     "typescript": "^5.1.3"
   },
   "jest": {
+    "moduleNameMapper":{
+      "^src/(.*)$":"<rootDir>/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
@@ -81,6 +84,11 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns":[
+      "node_modules",
+      ".entity.ts",
+      ".constants.ts"
+    ]
   }
 }
