--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "graphql": "^16.9.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
@@ -67,8 +69,8 @@
     "typescript": "^5.1.3"
   },
   "jest": {
-    "moduleNameMapper":{
-      "^src/(.*)$":"<rootDir>/$1"
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
     },
     "moduleFileExtensions": [
       "js",
@@ -85,7 +87,7 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
-    "coveragePathIgnorePatterns":[
+    "coveragePathIgnorePatterns": [
       "node_modules",
       ".entity.ts",
       ".constants.ts"
